--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation "com.github.RedstonerServer:CommandManager:master-SNAPSHOT"
     implementation "com.github.RedstonerServer:ChatAPI:master-SNAPSHOT"
     implementation "com.github.RedstonerServer:ChestAPI:master-SNAPSHOT"
+    
+    compile group: 'org.apache.logging.log4j', name: 'log4j-1.2-api', version: '2.11.1'
 
     compileOnly 'org.spigotmc:spigot-api:1.13.2-R0.1-SNAPSHOT'
 }
